mm02ce/dunghd/popup/src/scripts/stylesheets/components/_all.scss
$logo-img: url('./images/dog_blue.png');
$close-btn-img: url('./images/close_button.png');

/*distance box*/

.m0 {
  margin: 0 !important;
}

.mt0 {
  margin-top: 0 !important;
}

.mb0 {
  margin-bottom: 0px !important;
}

.ml0 {
  margin-left: 0 !important;
}

.mr0 {
  margin-right: 0px !important;
}

.p0 {
  padding: 0 !important;
}

.pt0 {
  padding-top: 0px !important;
}

.pb0 {
  padding-bottom: 0px !important;
}

.pl0 {
  padding-left: 0px !important;
}

.pr0 {
  padding-right: 0px !important;
}


/*popup browser*/

.popup-browser {
  .maomao-logo {
    margin-right: 3px;
    width: 30px;
    height: 30px;
    display: inline-block;
    background: $logo-img;
    vertical-align: top;
    background-size: contain;
    animation-name: zoomInLogo;
    animation-duration: 1s;
    animation-fill-mode: both;
    transition: all 0.2s ease-in-out;
  }
  .share-heading {
    text-align: center;
    font-weight: bold;
    font-size: 32px;
    line-height: 27px;
    padding-bottom: 13px;
    text-transform: none;
    border-bottom: 1px solid #c5c5d0;
    transition: transform 200ms ease-in;
    a {
      color: #999;
      text-decoration: none;
      display: inline-block;
      font-size: 32px;
      line-height: 28px;
      font-family: 'rokkittsemibold';
      text-shadow: 0.025em 0.025em 0.025em rgba(0, 0, 0, 0.8);
      &:hover,
      &:focus {
        .maomao-logo {
          transform: rotate(7deg);
          transition: all 0.2s ease-in-out;
        }
      }
    }
  }
}

.circle-share {
  margin: 20px auto;
  width: 230px;
  height: 230px;
  display: table;
  border-radius: 50%;
  border: 2px solid #4fb6ec;
  .circle-inner {
    display: table-cell;
    vertical-align: middle;
  }
  .share-options {
    margin: 0 !important;
    height: auto !important;
    width: auto !important;
    button {
      margin: 5px 0 !important;
      min-width: 150px;
      color: #fff;
      &,
      &:hover,
      &:active {
        transition: all 0.2s ease-in-out;
      }
    }
  }
  &::after {
    animation: rotate-circle 1s linear infinite;
    content: '';
    display: block;
    width: 233px;
    height: 233px;
    position: absolute;
    top: -3px;
    left: -3px;
    border: 5px solid transparent;
    border-top-color: #4fb6ec;
    border-radius: 50%;
  }
  .paragraph-share {
    text-align: center;
    font-size: 21px;
    font-weight: 400;
    display: table-cell;
    vertical-align: middle;
  }
}

.popup-content {
  padding: 20px 15px;
  min-width: 340px;
  max-height: 300px;
  overflow-y: auto;
  text-align: center;
  .power-group {
    margin: 0 auto 10px;
    min-height: 117px;
    max-width: 117px;
    background: none;
    border: 0;
    padding: 0;
    transform-origin: center bottom 0px;
    transform: matrix(1, 0, 0, 1, 0, 0);
    transition: all 0.2s ease-in-out;
    .power-button {
      width: 117px;
      height: 117px;
      margin-bottom: 15px;
      border-radius: 50%;
      background: #eb3a28;
      background: linear-gradient(#eb3a28, #bd2213);
      position: relative;
      cursor: pointer;
      padding: 14px;
      .power-inner {
        position: relative;
        width: 100%;
        height: 100%;
        border-radius: inherit;
        background: linear-gradient(#d83625, #e83523);
        display: block;
        box-shadow: 0 -2px 5px rgba(255, 255, 255, 0.05), 0 2px 5px rgba(255, 255, 255, 0.1);
        &:after {
          position: absolute;
          width: 40px;
          height: 40px;
          background: white;
          background: #fff;
          left: 50%;
          top: 50%;
          content: "";
          border-radius: inherit;
          margin: -20px 0 0 -20px;
          box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
        }
        &:before {
          position: absolute;
          content: "";
          width: 30px;
          height: 30px;
          left: 50%;
          top: 50%;
          border-radius: inherit;
          background: inherit;
          margin: -15px 0 0 -15px;
          z-index: 2;
          box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(255, 255, 255, 1);
        }
        span {
          display: block;
          width: 16px;
          height: 16px;
          background: linear-gradient(#d83625, #e83523);
          position: absolute;
          left: 50%;
          margin-left: -8px;
          top: 24px;
          z-index: 3;
          position: relative;
          &:before {
            content: "";
            position: absolute;
            width: 6px;
            height: 20px;
            background: #fff;
            border-radius: 10px;
            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
            left: 50%;
            top: 0;
            margin-left: -3px;
          }
        }
      }
      &:before {
        content: "";
        position: absolute;
        left: -10px;
        right: -10px;
        top: -10px;
        bottom: -10px;
        z-index: -1;
        border-radius: inherit;
        -webkit-filter: blur(1px);
        filter: blur(1px);
      }
      &:after {
        content: "";
        position: absolute;
        left: -20px;
        right: -20px;
        top: -20px;
        bottom: -20px;
        z-index: -2;
        border-radius: inherit;
      }
    }
    &:active {
      transform: matrix(0.95, 0, 0, 0.95, 0, 0);
      transition: all 0.2s ease-in-out;
    }
  }
  p {
    font-size: 18px;
    font-weight: 400;
    text-align: center;
  }
}

.toolbar-button {
  padding: 20px 0 10px;
  border-top: 1px solid #c5c5d0;
  text-align: center;
  button {
    margin: 0 15px;
    display: inline-block;
    border: 0;
    width: 50px;
    height: 50px;
    transition: transform 800ms;
    position: relative;
    z-index: 100;
    box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 1);
    &,
    &:hover,
    &:active {
      transition: all 0.2s ease-in-out;
    }
    &:nth-child(4) {
      border: 1px solid #ccc;
      border-radius: 50%;
      background-size: 58%;
      background-position: center center;
    }
    &:before {
      content: '';
      transform: scale(0.7);
      position: absolute;
      width: 50px;
      height: 50px;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      border-radius: 50%;
      pointer-events: none;
      opacity: 1;
      z-index: -1;
    }
    &:nth-child(1) {
      &:before {
        box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 1);
      }
    }
    &:nth-child(2) {
      &:before {
        box-shadow: 0px 0px 8px 2px rgba(60, 90, 154, 0.53);
      }
    }
    &:nth-child(3) {
      &:before {
        box-shadow: 0px 0px 8px 2px rgba(0, 132, 255, 0.53);
      }
    }
    &:nth-child(4) {
      &:before {
        box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 1);
      }
    }
    &:after {
      transition: opacity 600ms, transform 800ms;
      content: '';
      line-height: 50px;
      transform: translate3d( 0, 0, 0);
      opacity: 1;
    }
    &:hover {
      transform: scale( 1.2);
      transition: transform 800ms, background-color 800ms;
      &:after {
        transform: translate3d( 0, -25px, 0);
        opacity: 0;
      }
      &:before {
        transition: transform 800ms, opacity 1000ms;
        transform: scale( 1.5);
        opacity: 0;
        z-index: 1;
      }
    }
    &:hover {
      &:nth-child(1) {
        &:before {
          box-shadow: 0px 0px 8px 2px rgba(255, 77, 37, 0.53);
        }
      }
      &:nth-child(4) {
        &:before {
          box-shadow: 0px 0px 8px 2px rgba(181, 180, 180, 0.53);
        }
      }
    }
  }
}

.select-cn-title {
  margin: 20px 0 15px;
  color: #606162;
  font-size: 20px;
  line-height: 22px;
  font-weight: normal;
  text-align: center;
  text-transform: uppercase;
}

.share-topic {
  text-align: center;
  .share-topic-title {
    margin: 0 0 12px;
    font-size: 17px;
    color: #e9201a;
  }
  .switch-list {
    @include clearfix();
    margin: 10px 0 15px;
    .switch-select {
      > div {
        margin: 0 auto;
      }
      padding: 0 10px;
      &,
      .type-name {
        display: inline-block;
      }
      .type-name {
        margin-top: 5px;
        font-size: 13px;
      }
    }
  }
}


/*animation rotate circle*/

@keyframes rotate-circle {
  70% {
    -webkit-transform: rotate(250deg);
    transform: rotate(250deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

